CORE-26700: Upgrade PHP version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,8 @@ before_script:
   - nvm install 8.12.0
   - nvm use 8.12.0
   - npm install -g gulp-cli
+  - source ${BUILD_DIR}/blt/scripts/frontend-setup.sh "${BUILD_DIR}/docroot"
+  - cd ${BUILD_DIR}
 
 before_install:
   # Disable xdebug.
@@ -128,7 +130,7 @@ install:
   # - nvm use 8.12.0
   # - npm install -g gulp-cli
   # Setup the themes here so the node_modules folders can be cached.
-  - source ${BUILD_DIR}/blt/scripts/frontend-setup.sh "${BUILD_DIR}/docroot"
+  # - source ${BUILD_DIR}/blt/scripts/frontend-setup.sh "${BUILD_DIR}/docroot"
   # Frontend-setup.sh changed directory, hence we return to the original dir.
   - cd ${BUILD_DIR}
 
