--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -55,7 +55,7 @@ command-hooks:
     command: 'bash frontend-validate.sh ${docroot}'
   frontend-reqs:
     dir: '${repo.root}/blt/scripts'
-    command: 'bash react-setup.sh ${docroot} && bash frontend-setup.sh ${docroot} && cd ${docroot} && ../vendor/bin/blt js:setup'
+    command: 'bash frontend-validate.sh ${docroot} && bash react-setup.sh ${docroot} && bash frontend-setup.sh ${docroot} && cd ${docroot} && ../vendor/bin/blt js:setup'
   frontend-assets:
     dir: '${repo.root}/blt/scripts'
     command: 'bash frontend-build.sh ${docroot} && bash react-build.sh ${docroot} && cd ${docroot} && ../vendor/bin/blt js:build'
