--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/install/field.field.taxonomy_term.rcs_category.field_logo_inactive_image.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/install/field.field.taxonomy_term.rcs_category.field_logo_inactive_image.yml
@@ -7,6 +7,9 @@ dependencies:
   module:
     - content_translation
     - image
+  enforced:
+    module:
+      - alshaya_rcs_main_menu
 third_party_settings:
   content_translation:
     translation_sync:
