--- a/composer.json
+++ b/composer.json
@@ -344,6 +344,9 @@
             },
             "drupal/metatag": {
                 "Metatags' current language through the language manager doesn't work (Decoupled Drupal)": "https://www.drupal.org/files/issues/2021-08-03/metatag-3077442-6.patch"
+            },
+            "drupal/pcb": {
+                "PCB module having issue with memcache": "patches/pcb/pcb_memcache_issue_resolved.patch"
             }
         },
         "installer-paths": {
