--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -55,10 +55,10 @@ command-hooks:
     command: 'bash frontend-validate.sh ${docroot}'
   frontend-reqs:
     dir: '${repo.root}/blt/scripts'
-    command: 'bash frontend-validate.sh ${docroot} && bash react-setup.sh ${docroot} && bash frontend-setup.sh ${docroot} && cd ${docroot} && npm install'
+    command: 'bash frontend-validate.sh ${docroot} && bash react-setup.sh ${docroot} && bash frontend-setup.sh ${docroot} && cd ${docroot} && ../vendor/bin/blt js:setup'
   frontend-assets:
     dir: '${repo.root}/blt/scripts'
-    command: 'bash frontend-build.sh ${docroot} && bash react-build.sh ${docroot} && cd ${docroot} && npm build'
+    command: 'bash frontend-build.sh ${docroot} && bash react-build.sh ${docroot} && cd ${docroot} && ../vendor/bin/blt js:build'
   pre-config-import:
     dir: '${docroot}'
     command: 'echo ''No pre-config-import configured.'''
