--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 # @see https://github.com/travis-ci/travis-ci/issues/6842
 sudo: required
 language: php
-dist: bionic
+dist: trusty
 
 matrix:
   fast_finish: true
@@ -126,11 +126,11 @@ install:
   - echo "memory_limit=576M" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - echo "extension = memcached.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
   - source $BLT_DIR/scripts/travis/setup_project
-  # - nvm install 8.12.0
-  # - nvm use 8.12.0
-  # - npm install -g gulp-cli
+  - nvm install 8.12.0
+  - nvm use 8.12.0
+  - npm install -g gulp-cli
   # Setup the themes here so the node_modules folders can be cached.
-  # - source ${BUILD_DIR}/blt/scripts/frontend-setup.sh "${BUILD_DIR}/docroot"
+  - source ${BUILD_DIR}/blt/scripts/frontend-setup.sh "${BUILD_DIR}/docroot"
   # Frontend-setup.sh changed directory, hence we return to the original dir.
   - cd ${BUILD_DIR}
 
