--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -50,12 +50,12 @@ modules:
     enable: [acquia_connector, shield, dynamic_page_cache]
     uninstall: [views_ui]
 command-hooks:
-  frontend-reqs:
-    dir: '${repo.root}/blt/scripts'
-    command: 'bash react-setup.sh ${docroot} && bash frontend-setup.sh ${docroot} && cd ${docroot} && ../vendor/bin/blt js:setup'
   frontend-test:
     dir: '${repo.root}/blt/scripts'
     command: 'bash frontend-validate.sh ${docroot}'
+  frontend-reqs:
+    dir: '${repo.root}/blt/scripts'
+    command: 'bash frontend-validate.sh ${docroot} && bash react-setup.sh ${docroot} && bash frontend-setup.sh ${docroot} && cd ${docroot} && ../vendor/bin/blt js:setup'
   frontend-assets:
     dir: '${repo.root}/blt/scripts'
     command: 'bash frontend-build.sh ${docroot} && bash react-build.sh ${docroot} && cd ${docroot} && ../vendor/bin/blt js:build'
