CORE-31972: Renamed class and options. Check if its RCS entity.

--- a/docroot/modules/custom/alshaya_rcs/config/install/block.block.rcs_placeholders_breadcrumb.yml
+++ b/docroot/modules/custom/alshaya_rcs/config/install/block.block.rcs_placeholders_breadcrumb.yml
@@ -18,9 +18,8 @@ settings:
   provider: rcs_placeholders
   label_display: '0'
 visibility:
-  rcs_entity:
-    id: rcs_entity
-    rcs_nodes_enabled: 1
-    rcs_terms_enabled: 1
-    negate: null
+  rcs_context:
+    id: rcs_context
+    use_rcs_context: 1
+    negate: 0
     context_mapping: {}
