--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,8 @@ matrix:
       # there will be fresh PR merges which will take care of pushing.
       if: type = push AND (branch IN (master, uat, qa, develop) OR commit_message !~ /(git\+ssh)/)
 
-#services:
-  # - mysql
+services:
+  - mysql
   # - memcached
 
 env:
