--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "drupal/autologout": "^1.0",
         "drupal/back_to_top": "^1.1",
         "drupal/better_exposed_filters": "^4.0@beta",
-        "drupal/block_content_machine_name": "^1.5",
+        "drupal/block_content_machine_name": "^1.6",
         "drupal/block_field": "^1.0@alpha",
         "drupal/captcha": "^1.0@beta",
         "drupal/change_pwd_page": "^1.0@beta",
@@ -344,6 +344,9 @@
             },
             "drupal/pcb": {
                 "PCB module having issue with memcache": "patches/pcb/pcb_memcache_issue_resolved.patch"
+            },
+            "drupal/block_content_machine_name": {
+                "Not compatible with Drupal 9 when install with composer": "https://www.drupal.org/files/issues/2021-02-22/3199593-1.patch"
             }
         },
         "installer-paths": {
