CORE-40520: Fixed merge conflict in hm rcs transac module. Fixed merge conflict with develop,

--- a/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
+++ b/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
@@ -21,3 +21,8 @@ product.block.short_description.pdp-magazine:
   version: 1.x
   js:
     templates/rcs-product-short-description-full-magazine-block.handlebars: { }
+
+gallery.product.product_gallery_magazine:
+  version: 1.x
+  js:
+    templates/rcs-product-gallery-magazine.handlebars: {}
