CORE-40520: Added comments, code optimizations and removed previous code from hanlebar. Fixed rebase conflict with  develop.

--- a/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
+++ b/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
@@ -26,3 +26,13 @@ gallery.product.product_gallery_magazine:
   version: 1.x
   js:
     templates/rcs-product-gallery-magazine.handlebars: {}
+
+product_overlay:
+  version: 1.x
+  js:
+    js/alshaya_hm_load_overlay.js: {}
+  dependencies:
+    - core/drupal
+    - core/drupalSettings
+    - core/jquery
+    - rcs_placeholders/helpers
