CORE-42565: Moved the permissions config to V2 module.

--- a/docroot/modules/custom/alshaya_mobile_app/config/override/user.role.anonymous.yml
+++ b/docroot/modules/custom/alshaya_mobile_app/config/override/user.role.anonymous.yml
@@ -24,3 +24,5 @@ permissions:
   - 'restful get skus_product_list_v2'
   - 'restful get deeplink_v2'
   - 'restful get product_general_settings'
+  - 'restful get magazine_detail_page_v3'
+  - 'restful get deeplink_v3'
