CORE-42649: Hello member points integration on magazine layout pdp.

--- a/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.libraries.yml
+++ b/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.libraries.yml
@@ -18,3 +18,8 @@ alshaya_hello_member_benefits_page:
     dist/hello_member_benefits_page.bundle.js: {}
   dependencies:
     - alshaya_react/react
+alshaya_hello_member_pdp:
+  js:
+    dist/pdp.bundle.js: {}
+  dependencies:
+    - alshaya_react/react
