CORE-39239: Added the opening hours fix in MAP.

--- a/docroot/modules/react/alshaya_geolocation/alshaya_geolocation.routing.yml
+++ b/docroot/modules/react/alshaya_geolocation/alshaya_geolocation.routing.yml
@@ -2,7 +2,7 @@ alshaya_geolocation.store_finder:
   path: '/store-finder'
   defaults:
     _controller: '\Drupal\alshaya_geolocation\Controller\AlshayaStoreFinderController::store'
-    _title: 'Store Finder'
+    _title: 'Find Stores'
   requirements:
     _permission: 'access content'
 
@@ -10,6 +10,6 @@ alshaya_geolocation.store_finder_list:
   path: '/store-finder/list'
   defaults:
     _controller: '\Drupal\alshaya_geolocation\Controller\AlshayaStoreFinderController::storeList'
-    _title: 'Store Finder List'
+    _title: 'Find Stores'
   requirements:
     _permission: 'access content'
