CORE-41887: otp popup UI - [My account] My details.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -807,3 +807,8 @@ hello-member-qr-code:
   css:
     theme:
       css/conditional-sass/hello-member-qr-code/hello-member-qr-code.ltr.css: {}
+
+hello-member-otp:
+  css:
+    theme:
+      css/conditional-sass/hello-member-otp/hello-member-otp.ltr.css: {}
