--- a/docroot/modules/react/package.json
+++ b/docroot/modules/react/package.json
@@ -87,6 +87,7 @@
     "react-images-uploading": "^3.1.2",
     "react-instantsearch-dom": "^5.7.0",
     "react-magic-slider-dots": "^1.2.1",
+    "react-otp-input": "^2.4.0",
     "react-qr-code": "^2.0.7",
     "react-select": "^3.0.8",
     "react-slick": "^0.25.2",
