--- a/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.info.yml
+++ b/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.info.yml
@@ -299,3 +299,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/hello-member-qr-code/hello-member-qr-code.ltr.css: css/conditional-sass/hello-member-qr-code/hello-member-qr-code.ltr.css
+
+  alshaya_white_label/hello-member-otp:
+    css:
+      theme:
+        css/conditional-sass/hello-member-otp/hello-member-otp.ltr.css: css/conditional-sass/hello-member-otp/hello-member-otp.ltr.css
