--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -807,3 +807,8 @@ hello-member-qr-code:
   css:
     theme:
       css/conditional-sass/hello-member-qr-code/hello-member-qr-code.ltr.css: {}
+
+hello-member-pdp:
+  css:
+    theme:
+      css/conditional-sass/hello-member-pdp/hello-member-pdp.ltr.css: {}
