CORE-40521: Fixes for PDP display.

--- a/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
+++ b/docroot/modules/brands/alshaya_hm/modules/alshaya_hm_transac_rcs/alshaya_hm_transac_rcs.libraries.yml
@@ -5,6 +5,7 @@ product:
   dependencies:
     - core/jquery
     - rcs_placeholders/helpers
+    - alshaya_master/common_functions
 
 product.block.description:
   version: 1.x
