CORE-34050: TBS PDP page changes.

--- a/docroot/modules/brands/alshaya_tbs/modules/alshaya_tbs_transac_rcs/alshaya_tbs_transac_rcs.libraries.yml
+++ b/docroot/modules/brands/alshaya_tbs/modules/alshaya_tbs_transac_rcs/alshaya_tbs_transac_rcs.libraries.yml
@@ -6,6 +6,11 @@ product:
     - core/jquery
     - rcs_placeholders/helpers
 
+product.block.name:
+  version: 1.x
+  js:
+    templates/rcs-product-name-block.handlebars: {}
+
 product.block.description:
   version: 1.x
   js:
