CORE-42741: Added code to show OOS message on add to cart form when main product is OOS.

--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
@@ -54,6 +54,11 @@ product.sku_base_form:
   js:
     templates/rcs-sku-base-form.handlebars: {}
 
+product.sku_base_form_oos:
+  version: 1.x
+  js:
+    templates/rcs-sku-base-form-oos.handlebars: {}
+
 product.not_buyable_product:
   version: 1.x
   js:
