--- a/docroot/modules/react/alshaya_geolocation/alshaya_geolocation.services.yml
+++ b/docroot/modules/react/alshaya_geolocation/alshaya_geolocation.services.yml
@@ -1,4 +1,4 @@
 services:
   alshaya_geolocation.store_utility:
     class: Drupal\alshaya_geolocation\AlshayaStoreUtility
-    arguments: ['@config.factory']
+    arguments: ['@config.factory', '@language_manager']
