CORE-42663: UAT-release-6.16.0.

--- a/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/bbw/env/uat/markets/ae/ae.yml
@@ -1,10 +1,10 @@
 variables:
   spc_product_listing_page: '/shop-body-care/body-care-offers/buy-2-get-1-free-beauty-go/'
-  spc_pdp_page: '/buy-paraffin-pomegranate-hand-cream.html/'
+  spc_pdp_page: '/buy-warm-vanilla-sugar-travel-size-fine-fragrance-mist.html/'
   spc_basket_page: '/shop-body-care/body-care-offers/buy-2-get-1-free-beauty-go//'
   product_listing_page_url: '/shop-body-care/body-care-offers/buy-2-get-1-free-beauty-go/'
-  spc_single_product_detail_page_coupon: '/buy-thousand-wishes-glowing-body-scrub.html/'
-  spc_multiple_product_detail_page_coupon: '/buy-thousand-wishes-glowing-body-scrub.html/'
-  spc_single_product_detail_page_no_coupon: '/buy-thousand-wishes-glowing-body-scrub.html/'
-  spc_multiple_product_detail_page_no_coupon: '/buy-thousand-wishes-glowing-body-scrub.html/'
-  spc_promotion_listing_page: '/buy-thousand-wishes-glowing-body-scrub.html/'
+  spc_single_product_detail_page_coupon: '/buy-warm-vanilla-sugar-travel-size-fine-fragrance-mist.html'
+  spc_multiple_product_detail_page_coupon: '/buy-warm-vanilla-sugar-travel-size-fine-fragrance-mist.html/'
+  spc_single_product_detail_page_no_coupon: '/buy-warm-vanilla-sugar-travel-size-fine-fragrance-mist.html/'
+  spc_multiple_product_detail_page_no_coupon: '/buy-warm-vanilla-sugar-travel-size-fine-fragrance-mist.html/'
+  spc_promotion_listing_page: '/buy-warm-vanilla-sugar-travel-size-fine-fragrance-mist.html/'
