--- a/tests/behat/templates/variables/brands/cos/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/cos/env/uat/markets/kw/kw.yml
@@ -1,6 +1,6 @@
 variables:
-  url_product_page: 'buy-relaxed-fit-hemp-t-shirt-beige.html'
-  product_listing_page_url: "/shop-women/new-arrivals/"
-  spc_product_listing_page: '/shop-women/new-arrivals/'
-  spc_basket_page: '/shop-women/new-arrivals/'
-  spc_pdp_page: 'buy-relaxed-fit-hemp-t-shirt-beige.html'
+  url_product_page: '/buy-relaxed-fit-knitted-polo-shirt-beige.html/'
+  product_listing_page_url: "/shop-women/dresses/midi-dresses/"
+  spc_product_listing_page: '/shop-women/dresses/midi-dresses/'
+  spc_basket_page: '/shop-women/dresses/midi-dresses/'
+  spc_pdp_page: '/buy-relaxed-fit-knitted-polo-shirt-beige.html/'
