--- a/tests/behat/templates/variables/brands/fl/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/fl/env/uat/markets/ae/ae.yml
@@ -1,7 +1,7 @@
 variables:
-  spc_product_listing_page: '/shop-womens/shoes/basketball/'
-  spc_basket_page: '/shop-mens/shoes/test-sport/'
+  spc_product_listing_page: '/shop-womens/'
+  spc_basket_page: '/shop-womens/'
   spc_pdp_page: 'buy-nike-pg-3-mens-shoes-black-black-white.html'
-  product_listing_page_url: '/shop-mens/shoes/test-sport/'
+  product_listing_page_url: '/shop-womens/'
   np_plp_product_page: 'buy-nike-pg-3-mens-shoes-black-black-white.html'
-  np_plp_page: 'shop-mens/shoes/test-sport/'
+  np_plp_page: '/shop-womens/'
