--- a/tests/behat/templates/variables/brands/fl/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/fl/env/uat/markets/kw/kw.yml
@@ -1,7 +1,7 @@
 variables:
   spc_product_listing_page: '/shop-kids/'
   spc_basket_page: '/shop-kids/'
-  spc_pdp_page: '/shop-kids/'
+  spc_pdp_page: '/buy-nike-air-max-270-pre-school-shoes-pure-platinum-black-hyper-jade-0.html/'
   product_listing_page_url: '/shop-kids/'
-  np_plp_product_page: 'buy-foot-locker-3-pack-active-dry-crew-socks-grey-white-black.html'
-  np_plp_page: 'shop-womens/shoes/basketball'
+  np_plp_product_page: '/buy-nike-air-max-270-pre-school-shoes-pure-platinum-black-hyper-jade-0.html/'
+  np_plp_page: '/shop-kids/'
