--- a/tests/behat/templates/variables/brands/fl/env/uat/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/fl/env/uat/markets/sa/sa.yml
@@ -2,8 +2,8 @@ variables:
   url_product_page: 'buy-forcefield-premium-laces-black-black-black.html'
   product_listing_page_url: '/shop-collections/'
   spc_product_listing_page: '/shop-collections/'
-  spc_pdp_page: 'buy-forcefield-premium-laces-black-black-black.html'
+  spc_pdp_page: '/buy-adidas-stan-smith-flower-embroidery-womens-shoes-white-black-white.html/'
   spc_basket_page: '/shop-collections/'
   new_checkout_enabled: TRUE
-  np_plp_product_page: '/buy-forcefield-premium-laces-black-black-black.html/'
+  np_plp_product_page: '/buy-adidas-stan-smith-flower-embroidery-womens-shoes-white-black-white.html/'
   np_plp_page: '/shop-collections/'
