--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/ae/ae.yml
@@ -1,7 +1,7 @@
 variables:
   url_product_page: 'buy-long-sleeved-blouse-black.html'
-  product_listing_page_url: '/shop-lingerie/'
-  spc_product_listing_page: '/shop-lingerie/'
-  spc_basket_page: '/shop-lingerie/'
-  spc_pdp_page: 'buy-long-sleeved-blouse-black.html'
-  spc_bank_product: '/shop-lingerie/'
+  product_listing_page_url: '/shop-divided/'
+  spc_product_listing_page: '/shop-divided/'
+  spc_basket_page: '/shop-divided/'
+  spc_pdp_page: '/buy-hoodie-cream-original.html/'
+  spc_bank_product: '/shop-divided/'
