--- a/tests/behat/templates/variables/brands/hm/env/uat/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/hm/env/uat/markets/kw/kw.yml
@@ -1,7 +1,7 @@
 variables:
   url_product_page: 'buy-slub-jersey-t-shirt-white.html'
-  product_listing_page_url: "/shop-men/new-arrivals/shoes-accessories/"
-  spc_product_listing_page: '/shop-men/new-arrivals/shoes-accessories/'
-  spc_basket_page: '/shop-men/new-arrivals/shoes-accessories/'
-  spc_pdp_page: '/buy-5-pack-sports-socks-dark-grey-marl.html/'
+  product_listing_page_url: "/shop-women/"
+  spc_product_listing_page: '/shop-women/'
+  spc_basket_page: '/shop-women/'
+  spc_pdp_page: '/buy-cigarette-trousers-dark-blue-pinstriped.html/'
   spc_egift_page: '/egift/'
