--- a/tests/behat/templates/variables/brands/pbk/env/uat/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/pbk/env/uat/markets/ae/ae.yml
@@ -1,5 +1,5 @@
 variables:
-  spc_product_listing_page: '/shop-kids/infants/new-arrivals/'
-  spc_basket_page: '/shop-kids/infants/new-arrivals/'
-  spc_pdp_page: '/buy-washed-velvet-baby-bedding.html/'
-  product_listing_page_url: "/shop-kids/infants/new-arrivals/"
+  spc_product_listing_page: '/shop-kids/'
+  spc_basket_page: '/shop-kids/'
+  spc_pdp_page: '/buy-sloan-tall-bookcase.html/'
+  product_listing_page_url: "/shop-kids/"
