--- a/tests/behat/templates/variables/brands/vs/env/prod/markets/ae/ae.yml
+++ b/tests/behat/templates/variables/brands/vs/env/prod/markets/ae/ae.yml
@@ -1,5 +1,5 @@
 variables:
   spc_product_listing_page: '/beauty/shop-pink-beauty/body/body-mists/'
   spc_basket_page: '/beauty/shop-pink-beauty/body/body-mists/'
-  spc_pdp_page: 'beauty/buy-getaway-collection-body-mist-coconut-woods.html'
+  spc_pdp_page: '/beauty/buy-fragrant-body-lotion-all-dream.html/'
   product_listing_page_url: '/beauty/shop-pink-beauty/body/body-mists/'
