CORE-41483: HM CLS layout styles common elements.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -777,3 +777,8 @@ inter-country-transfer:
   css:
     theme:
       css/conditional-sass/inter-country-transfer/inter-country-transfer.ltr.css: {}
+
+cls-initial-layout.common:
+  css:
+    theme:
+      css/conditional-sass/cls-initial-layout/common/common.ltr.css: {}
