--- a/docroot/themes/custom/transac/alshaya_american_eagle/alshaya_american_eagle.info.yml
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/alshaya_american_eagle.info.yml
@@ -205,3 +205,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/egift-cart/egift-cart.ltr.css: css/conditional-sass/egift-cart/egift-cart.ltr.css
+
+  alshaya_white_label/online-returns:
+    css:
+      theme:
+        css/conditional-sass/online-returns/online-returns.ltr.css: css/conditional-sass/online-returns/online-returns.ltr.css
