--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
@@ -175,3 +175,8 @@ attribute.brand.logo:
   version: 1.x
   js:
     templates/handlebars/rcs-attribute-brand-logo.handlebars: {}
+
+product.overlay_attributes:
+  version: 1.x
+  js:
+    templates/rcs-product-overlay-attributes.handlebars: {}
