CORE-42239: Refactoring FL menu full width code in megamenu-fullwidth-layout library.

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -781,4 +781,4 @@ inter-country-transfer:
 megamenu-fullwidth-layout:
   css:
     theme:
-      css/conditional-sass/megamenu-fullwidth-layout/megamenu-fullwidth-layout.scss: {}
+      css/conditional-sass/megamenu-fullwidth-layout/megamenu-fullwidth-layout.ltr.css: {}
