CORE-42960: Initial dependencies corrections.

--- a/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/alshaya_rcs.libraries.yml
@@ -2,4 +2,6 @@ utility:
   js:
     js/alshaya_rcs_utility.js: {}
   dependencies:
-    - core/jquery
+    - core/drupal
+    - rcs_placeholders/helpers
+    - alshaya_master/common_functions
