--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_color_split/alshaya_rcs_color_split.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_color_split/alshaya_rcs_color_split.libraries.yml
@@ -3,4 +3,5 @@ rcs_grouped_products:
   js:
     js/alshaya_rcs_color_split.grouped_products.js: {}
   dependencies:
+    - core/drupal
     - rcs_placeholders/helpers
