--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magazine/alshaya_rcs_magazine.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magazine/alshaya_rcs_magazine.libraries.yml
@@ -3,6 +3,7 @@ main:
   js:
     js/alshaya_rcs_magazine.js: {}
   dependencies:
-    - core/jquery
+    - core/drupal
+    - core/drupalSettings
     - rcs_placeholders/helpers
     - alshaya_master/common_functions
