--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/alshaya_rcs_magento_placeholders.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_magento_placeholders/alshaya_rcs_magento_placeholders.libraries.yml
@@ -2,5 +2,6 @@ main:
   js:
     dist/alshaya_rcs_magento_placeholders.bundle.js: {}
   dependencies:
-    - core/jquery
+    - core/drupal
     - core/drupalSettings
+    - alshaya_master/common_functions
