--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_dynamic_yield/alshaya_rcs_dynamic_yield.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_dynamic_yield/alshaya_rcs_dynamic_yield.libraries.yml
@@ -3,6 +3,7 @@ rcs_dynamic_yield:
     js/alshaya_rcs_dynamic_yield.js: {}
   dependencies:
     - core/jquery
+    - core/drupal
     - core/drupalSettings
     - rcs_placeholders/helpers
     - dynamic_yield/dynamic_yield.script_injection
