--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_listing/alshaya_rcs_listing.libraries.yml
@@ -2,6 +2,9 @@ renderer:
   js:
     dist/alshaya_rcs_listing_renderer.bundle.js: {}
   dependencies:
+    - core/jquery
+    - core/drupal
+    - core/drupalSettings
     - alshaya_rcs_magento_placeholders/main
     - rcs_magento_placeholders/rcs_magento_placeholders
 
@@ -9,11 +12,16 @@ rcs_listing_dynamic_yield:
   js:
     js/alshaya_rcs_listing_dy.js: {}
   dependencies:
+    - core/drupal
     - rcs_magento_placeholders/rcs_magento_placeholders
 
 product_carousel_utility:
   js:
     js/alshaya_rcs_product_category_carousel.utility.js: {}
+  dependencies:
+    - core/jquery
+    - core/drupal
+    - core/drupalSettings
 
 carousel.accordion:
   version: 1.x
