--- a/docroot/modules/custom/alshaya_performance/alshaya_performance.links.menu.yml
+++ b/docroot/modules/custom/alshaya_performance/alshaya_performance.links.menu.yml
@@ -1,5 +1,5 @@
 alshaya_performance.all_settings:
   route_name: alshaya_performance.all_settings
-  title: 'Alshaya Performance Settings'
+  title: 'Alshaya Performance Settings (EXPERIMENTAL)'
   description: 'Configure Alshaya Performance Settings from here.'
   parent: alshaya_master.alshaya_admin
