--- a/docroot/modules/custom/alshaya_performance/alshaya_performance.routing.yml
+++ b/docroot/modules/custom/alshaya_performance/alshaya_performance.routing.yml
@@ -2,6 +2,6 @@ alshaya_performance.all_settings:
   path: '/admin/config/alshaya/performance-settings'
   defaults:
     _form: '\Drupal\alshaya_performance\Form\AlshayaPerformanceSettingsForm'
-    _title: 'Alshaya Performance Settings'
+    _title: 'Alshaya Performance Settings (EXPERIMENTAL)'
   requirements:
     _permission: 'administer site configuration'
