--- a/docroot/modules/custom/rcs_magento/modules/rcs_magento_placeholders/rcs_magento_placeholders.libraries.yml
+++ b/docroot/modules/custom/rcs_magento/modules/rcs_magento_placeholders/rcs_magento_placeholders.libraries.yml
@@ -2,6 +2,6 @@ rcs_magento_placeholders:
   js:
     dist/rcs_magento_placeholders.bundle.js: {}
   dependencies:
-    - core/jquery
     - core/drupalSettings
     - rcs_magento/backend
+    - rcs_placeholders/helpers
