--- a/docroot/modules/custom/rcs_magento/rcs_magento.libraries.yml
+++ b/docroot/modules/custom/rcs_magento/rcs_magento.libraries.yml
@@ -3,4 +3,5 @@ backend:
     dist/rcs_magento.bundle.js: {}
   dependencies:
     - core/jquery
+    - core/drupalSettings
     - rcs_placeholders/helpers
