--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_olapic/alshaya_rcs_olapic.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_olapic/alshaya_rcs_olapic.info.yml
@@ -4,3 +4,5 @@ description: 'Alshaya RCS implementation of Olapic'
 package: Alshaya
 core: 8.x
 core_version_requirement: ^8 || ^9
+dependencies:
+  - alshaya_olapic:alshaya_olapic
