CORE-42960: Critical JS libraries and error preventions.

--- a/docroot/modules/custom/alshaya_performance/modules/alshaya_js_optimisations/alshaya_js_optimisations.services.yml
+++ b/docroot/modules/custom/alshaya_performance/modules/alshaya_js_optimisations/alshaya_js_optimisations.services.yml
@@ -6,3 +6,5 @@ services:
     arguments:
       - '@config.factory'
       - '@library.dependency_resolver'
+      - '@extension.list.module'
+      - '@extension.list.theme'
