--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -63,6 +63,7 @@ slider_banner:
     - core/jquery
     - core/drupal
     - alshaya_white_label/slick
+    - alshaya_white_label/utils
     - alshaya_white_label/alshaya_image_lazy_load
 
 delivery_usp:
