CORE-41483: Naming conventions changes - feedback updates.

--- a/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.info.yml
+++ b/docroot/themes/custom/transac/alshaya_hnm/alshaya_hnm.info.yml
@@ -270,7 +270,7 @@ libraries-override:
       theme:
         css/conditional-sass/rcs-product-related/rcs-product-related.ltr.css: css/conditional-sass/rcs-product-related/rcs-product-related.ltr.css
 
-  alshaya_white_label/cls-initial-layout.common:
+  alshaya_white_label/cls-initial-layout-common:
     css:
       theme:
-        css/conditional-sass/cls-initial-layout/common/common.ltr.css: css/conditional-sass/cls-initial-layout/common/common.ltr.css
+        css/conditional-sass/cls-initial-layout-common/cls-initial-layout-common.ltr.css: css/conditional-sass/cls-initial-layout-common/cls-initial-layout-common.ltr.css
