--- a/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.libraries.yml
+++ b/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.libraries.yml
@@ -28,3 +28,9 @@ alshaya_hello_member_send_otp:
     dist/send_otp.bundle.js: {}
   dependencies:
     - alshaya_react/react
+utility:
+  js:
+    js/assets/alshaya_hello_member.utility.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
