--- a/docroot/modules/react/alshaya_online_returns/alshaya_online_returns.info.yml
+++ b/docroot/modules/react/alshaya_online_returns/alshaya_online_returns.info.yml
@@ -5,3 +5,4 @@ package: 'Alshaya'
 core_version_requirement: ^8.8 || ^9
 dependencies:
   - alshaya_react:alshaya_react
+  - alshaya_seo_transac:alshaya_seo_transac
