DIG-10135: Added the V3 supported function to get productInfo.

--- a/docroot/modules/react/alshaya_online_returns/alshaya_online_returns.libraries.yml
+++ b/docroot/modules/react/alshaya_online_returns/alshaya_online_returns.libraries.yml
@@ -27,4 +27,4 @@ alshaya_online_returns_pdp_gtm:
   js:
     js/alshaya_online_returns_pdp_gtm.js: {}
   dependencies:
-    - core/drupalSettings
+    - core/jquery
