--- a/blt/alshaya_local_sites.yml
+++ b/blt/alshaya_local_sites.yml
@@ -170,6 +170,14 @@ sites:
     module: alshaya_aeo
     type: alshaya_transac
     country: ae
+  aeoxb:
+    module: alshaya_aeo
+    type: alshaya_transac
+    country: ae
+  aeoom:
+    module: alshaya_aeo
+    type: alshaya_transac
+    country: ae
   aeoeg:
     module: alshaya_aeo
     type: alshaya_transac
