CORE-43164: Rendered header component using global function.

--- a/docroot/modules/react/alshaya_aura_react/alshaya_aura_react.libraries.yml
+++ b/docroot/modules/react/alshaya_aura_react/alshaya_aura_react.libraries.yml
@@ -13,6 +13,7 @@ alshaya_aura_my_accounts:
 aura_header_library:
   js:
     dist/header.bundle.js: {}
+    js/load-header.js: {}
   dependencies:
     - alshaya_react/react
     - alshaya_aura_react/aura_backend.v2
