CORE-43038: Drupal config for Aura integration with hello member.

--- a/docroot/modules/react/alshaya_hello_member/config/install/alshaya_hello_member.settings.yml
+++ b/docroot/modules/react/alshaya_hello_member/config/install/alshaya_hello_member.settings.yml
@@ -1,2 +1,3 @@
 enabled: false # Config to enable/disable hello member feature.
 points_history_page_size: 5 # Config to store page size for points history data.
+aura_integration_enabled: true
