--- a/docroot/profiles/custom/alshaya_non_transac/alshaya_non_transac.info.yml
+++ b/docroot/profiles/custom/alshaya_non_transac/alshaya_non_transac.info.yml
@@ -29,6 +29,8 @@ dependencies:
   - memcache:memcache
   - drupal:syslog
   - twig_tweak:twig_tweak
+  - image_widget_crop:image_widget_crop
+  - moderation_dashboard:moderation_dashboard
 
 themes:
   - whitelabel
@@ -36,22 +38,3 @@ themes:
   - seven
 
 base profile: alshaya
-
-exclude:
-  - help
-  - history
-  - lightning_layout
-  - lightning_landing_page
-  - lightning_banner_block
-  - lightning_map_block
-  - lightning_media_instagram
-  - lightning_media_twitter
-  - lightning_media_video
-  - lightning_media_audio
-  - lightning_media_slideshow
-  - lightning_search
-  - shortcut
-  - lightning_scheduler
-  - moderation_sidebar
-  - update
-  - dblog
