--- a/docroot/profiles/custom/alshaya_transac_lite/alshaya_transac_lite.info.yml
+++ b/docroot/profiles/custom/alshaya_transac_lite/alshaya_transac_lite.info.yml
@@ -31,22 +31,6 @@ dependencies:
   - memcache:memcache
   - drupal:syslog
   - twig_tweak:twig_tweak
+  - image_widget_crop:image_widget_crop
 
 base profile: alshaya
-
-exclude:
-  - help
-  - history
-  - lightning_landing_page
-  - lightning_layout
-  - lightning_media_instagram
-  - lightning_media_twitter
-  - lightning_media_video
-  - lightning_media_audio
-  - lightning_media_slideshow
-  - lightning_search
-  - shortcut
-  - lightning_scheduler
-  - moderation_sidebar
-  - update
-  - dblog
