--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.info.yml
@@ -6,3 +6,4 @@ core_version_requirement: ^8 || ^9
 dependencies:
   - alshaya_rcs_magento_placeholders:alshaya_rcs_magento_placeholders
   - alshaya_main_menu:alshaya_main_menu
+  - rcs_handlebars:rcs_handlebars
