--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/alshaya_rcs_main_menu.libraries.yml
@@ -22,3 +22,23 @@ renderer:
     - alshaya_rcs_magento_placeholders/main
     - rcs_magento_placeholders/rcs_magento_placeholders
     - alshaya_rcs_main_menu/category_enrichment
+
+main_menu_level1:
+  version: 1.x
+  js:
+    handlebars/alshaya-main-menu-level1.handlebars: {}
+
+main_menu_level2:
+  version: 1.x
+  js:
+    handlebars/alshaya-main-menu-level2.handlebars: {}
+
+main_menu_level3:
+  version: 1.x
+  js:
+    handlebars/alshaya-main-menu-level3.handlebars: {}
+
+main_menu_level4:
+  version: 1.x
+  js:
+    handlebars/alshaya-main-menu-level4.handlebars: {}
