--- a/docroot/modules/react/alshaya_egift_card/config/install/alshaya_egift_card.settings.yml
+++ b/docroot/modules/react/alshaya_egift_card/config/install/alshaya_egift_card.settings.yml
@@ -1,4 +1,5 @@
 egift_card_enabled: false # Config to enable/disable egift card feature.
+link_card_for_topup: false # Config to enable/disable linking card on checkout page for top-up.
 payment_methods_not_supported:
   cashondelivery: cashondelivery
   checkout_com_upapi_fawry: checkout_com_upapi_fawry
