--- a/docroot/modules/react/alshaya_online_returns/alshaya_online_returns.info.yml
+++ b/docroot/modules/react/alshaya_online_returns/alshaya_online_returns.info.yml
@@ -6,3 +6,4 @@ core_version_requirement: ^8.8 || ^9
 dependencies:
   - alshaya_react:alshaya_react
   - alshaya_seo_transac:alshaya_seo_transac
+  - alshaya_acm_customer:alshaya_acm_customer
