--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.libraries.yml
@@ -99,6 +99,11 @@ product.teaser:
   js:
     templates/rcs-product-teaser.handlebars: {}
 
+product.recommended_products_block:
+  version: 1.x
+  js:
+    templates/rcs-product-recommendations-block.handlebars: {}
+
 product.recommended_products_teaser:
   version: 1.x
   js:
