--- a/docroot/modules/custom/alshaya_olapic/config/install/block.block.alshayaolapicwidget_4.yml
+++ b/docroot/modules/custom/alshaya_olapic/config/install/block.block.alshayaolapicwidget_4.yml
@@ -23,10 +23,10 @@ settings:
   div_id: '4'
   dynamic_product_id: ''
 visibility:
-  node_type:
-    id: node_type
-    bundles:
-      advanced_page: advanced_page
+  'entity_bundle:node':
+    id: 'entity_bundle:node'
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
+    bundles:
+      advanced_page: advanced_page
