--- a/composer.json
+++ b/composer.json
@@ -379,6 +379,9 @@
             },
             "drupal/jquery_ui_effects": {
                 "Fix 'jquery_ui_effects/clip' library to use jquery_ui_effects/core as a dependency": "https://www.drupal.org/files/issues/2022-01-17/3258833-2.patch"
+            },
+            "drupal/image_style_quality": {
+                "Static caching for toolkit definition": "https://www.drupal.org/files/issues/2021-12-03/image_style_quality-3252493-toolkit-cache.patch"
             }
         },
         "installer-paths": {
