CORE-41883: Fixes as per PR comments for hello member mainstream merge.

--- a/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.info.yml
+++ b/docroot/modules/react/alshaya_hello_member/alshaya_hello_member.info.yml
@@ -4,5 +4,6 @@ description: 'Implements hello member feature.'
 package: 'Alshaya'
 core_version_requirement: ^8 || ^9
 dependencies:
+  - alshaya_spc:alshaya_spc
   - alshaya_react:alshaya_react
   - alshaya_master:alshaya_master
