--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -782,6 +782,8 @@ hello-member-registration:
   css:
     theme:
       css/conditional-sass/hello-member-registration/hello-member-registration.ltr.css: {}
+  dependencies:
+    - alshaya_white_label/convert_to_select2
 
 my-membership-info:
   css:
