--- a/docroot/modules/react/alshaya_hello_member/config/install/alshaya_hello_member.settings.yml
+++ b/docroot/modules/react/alshaya_hello_member/config/install/alshaya_hello_member.settings.yml
@@ -1,4 +1,4 @@
-enabled: false # Config to enable/disable hello member feature.
+status: false # Config to enable/disable hello member feature.
 points_history_page_size: 5 # Config to store page size for points history data.
 minimum_age: 18 # Config to store minimum age for users registration
-aura_integration_enabled: false # Config to enable/disable aura integration with hello member.
+aura_integration_status: false # Config to enable/disable aura integration with hello member.
