--- a/docroot/modules/react/alshaya_hello_member/config/install/field.field.user.user.field_birth_date.yml
+++ b/docroot/modules/react/alshaya_hello_member/config/install/field.field.user.user.field_birth_date.yml
@@ -2,18 +2,18 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.user.field_date_of_birth
+    - field.storage.user.field_birth_date
   module:
     - datetime
     - user
-id: user.user.field_date_of_birth
-field_name: field_date_of_birth
+id: user.user.field_birth_date
+field_name: field_birth_date
 entity_type: user
 bundle: user
 label: 'Date of Birth'
 description: ''
 required: false
-translatable: true
+translatable: false
 skip_translation_check: 0
 default_value: {  }
 default_value_callback: ''
