--- a/docroot/modules/react/alshaya_hello_member/config/install/field.storage.user.field_birth_date.yml
+++ b/docroot/modules/react/alshaya_hello_member/config/install/field.storage.user.field_birth_date.yml
@@ -4,8 +4,8 @@ dependencies:
   module:
     - datetime
     - user
-id: user.field_date_of_birth
-field_name: field_date_of_birth
+id: user.field_birth_date
+field_name: field_birth_date
 entity_type: user
 type: datetime
 settings:
